frontend/core/src/main/webapp/static/less/components.less
/*
Extended Mind specific UI-components.
*/

// ACCORDION

// When item is active, show top border
.accordion-item-active {
  border-top-style: solid;
  border-width: 1px;
  border-color: @separator;
  padding-top: 5px;
  padding-bottom: 5px;
  .accordion-title-open {
    margin-top: -5px;
    padding-bottom: 5px;
    .left-input-wrapper {
      padding-left: 1px;
    }
    &.no-checkbox {
      margin-top: -6px;
    }
  }
}

// quick edit task indentation
.accordion-inner {
  #taskCoreFields {
    margin-left: 39px;
  }
  #taskList, #taskContext, #taskDue, .date-input-placeholder {
    margin-left: -7px;
  }
}

input[type="checkbox"]:checked ~ a#accordionTitleLink {
  color: @default-element;
  .fade-color(@fade-time);
}

div#accordionTitleHeightFix {
  height: @vertical-grid;
}

a#accordionTitleLink {
  color: @content;
  line-height: 19px;
}

// SIMPLE CONTENT

.simple-content {
  padding-bottom: @vertical-grid;
}

.simple-content:last-child {
  padding-bottom: 0;
}

#email-verification-status {
  font-size: @smallest-font-size;
  display: block;
  line-height: @vertical-grid-half;
}

// TEASER

.teaser {
  line-height: @vertical-grid-half;
  font-size: @small-font-size;
}

.teaser, .teaser-empty {
  padding-bottom: @vertical-grid-half;
}

// OFFLINE

.offline-indicator {
  display: inline;
  vertical-align: top;
  font-size: @small-font-size;
}

// ERRORS

#errorMessage {
  h3 {
    text-align: center;
    padding-bottom: @vertical-grid;
  }
}

// MODALS

#modalFooter {
  button[disabled].normal-button {
    color: white;
    background-color: @default-button-pressed;
  }
}

// ADD ITEM/NOTE/TASK..

.add-element {
  // Add @vertical grid to make room for 'add [item]...' input
  padding-bottom: @vertical-grid-half;
}

// PAGE HEADER

header.static-page-header nav {
  div#menu-button-wrapper {
    button#menu-button {
      .button;
      padding: 19px 20px 13px @horizontal-grid - 4; // increased clicking area, align icon to grid with right padding
      span.icon-menu {
        color: @highlighted-element;
      }
    }
    button#menu-button:active {
      span.icon-menu {
        color: @highlighted-element-pressed;
      }
    }
  }
  div#static-feature {
    color: @highlighted-element;
    font-weight: 700;
  }
}

header.page-header nav {
  color: @highlighted-element;

  #omnibar-label-wrapper {
    .edges-fade-to-white;
  }
  div#active-action-content-wrapper {
    a#today-link {
      float: left;
      color: @highlighted-element;
      font-size: @small-font-size;
      margin-top: 10px;
      padding-left: @horizontal-grid + 4;
      height: @page-header-height;
    }
    a.today-link-active {
      .font-bold;
    }

    button#menu-button {
      .button;
      padding: 19px 20px 13px @horizontal-grid; // increased clicking area
      span.icon-menu {
        padding-right: 4px;
        color: @highlighted-element;
      }
    }
    button#menu-button:active {
      background-position: 0 0;
      span.icon-menu {
        color: @highlighted-element-pressed;
      }
    }
  }

  button#plus-button {
    .button;
    padding: 17px @horizontal-grid 17px 20px; // increased clicking area
  }

  #omnibar-search-results {
    height: 100%;
    background-color: white;
    z-index: 1;
    position: relative;
  }
}

div.page-heading {
  input.omnibar-input {
    text-align: center;
  }
  input.omnibar-input:focus {
    text-align: left;
  }
}

// FOOTER

footer {
  a[class^='active-slide'], a[class*=' active-slide'] {
    span {
      color: @highlighted-element;
    }
    span:active {
      color: @highlighted-element-pressed;
    }
  }
}


// OMNIBAR

#omnibar-wrapper {
  position: relative;
  height: @page-header-height;
  form, .form-group, input {
    height: inherit;
  }
  .omnibar-visible {
    height: inherit;
    .left-input-wrapper;
    input {
      text-align: left !important;
    }
  }

  .omnibar-hidden {
    height: inherit;
    .center-horizontally;
    input::-webkit-input-placeholder { /* WebKit browsers */
      font-size: @large-font-size;
      .font-bold;
      color: @highlighted-element;
    }
    input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
      font-size: @large-font-size;
      .font-bold;
      color: @highlighted-element;
    }
    input::-moz-placeholder { /* Mozilla Firefox 19+ */
      font-size: @large-font-size;
      .font-bold;
      color: @highlighted-element;
    }
    input:-ms-input-placeholder { /* Internet Explorer 10+ */
      font-size: @large-font-size;
      .font-bold;
      color: @highlighted-element;
    }
  }

  #omnibar-results {
    margin-top: 12px;
    float: left;
    overflow-y: auto;
    // height set with javascript

    #filtered-items-placeholder {
      height: 100%;
      // width set with javascript
    }
    .filtered-items {
      padding-top: @vertical-grid-half;
    }
  }
}

#omnibarX {
  font-size: 18px;
  //padding-top: 0;
  padding-bottom: 9px;
}

// MENU

#menu-content {
  a, span {
    font-size: @small-font-size;
    .font-bold;
  }
  a.feature-link {
    font-size: 1.17em;  // http://www.w3.org/TR/CSS2/sample.html
  }
  li#last-feature { // padding-bottom for li with last a.feature-link
    padding-bottom: @vertical-grid;
  }
  li#collectives {
    line-height: @vertical-grid;
    div {
      padding-left: @horizontal-grid;
      a {
        font-size: @smallest-font-size;
        line-height: @vertical-grid-half;
        padding-bottom: @vertical-grid-half;
      }
    }
  }
}

// desktop
#desktop-menu {
  background-color: white;
  max-width: @one-column-grid-width;
  height: inherit;
  overflow-y: auto;
  .center-horizontally;
  #menu-content {
    padding-top: @page-header-height;
    padding-bottom: @footer-height;
    padding-left: @horizontal-grid;
    width: auto;
    a, span {
      display: block;
      color: @default-element;
    }
    a.collective {
      // FIXME: This color is strange
      color: @default-element;
    }
    a:hover {
      color: @default-element-hover;
    }
    a:active {
      color: @default-element-pressed;
    }
    a.feature-link.active {
      margin-left: -18px;
    }
    a.active {
      margin-left: -16px;
    }
    a.active:before {
      content: '\2022';
      margin-right: 10px;
    }
  }
}

// mobile
#mobile-menu {
  background-color: @mobile-menu;
  position: absolute;
  width: 260px;
  height: 100%;
  overflow-y: auto;
  #menu-content {
    div.banner {
      padding-top: 8px;
      height: @page-header-height;
      span.icon-logo-only {
        vertical-align: middle;
        font-size: @drawer-menu-icon-size;
      }
    }
    ul {
      margin-top: 4px;
    }
    a, span {
      color: #FEFFFF;
      padding-right: 30px;
      padding-left: 30px;
    }
    a:active {
      color: @default-element-pressed;
    }
    a.feature-link.active {
      background-color: white;
      color: black;
    }
    a {
      // http://getbootstrap.com/components/#dropdowns
      display: block;
    }
    a.feature-link:active {
      background-color: white;
      color: black;
    }
    a.active:not(.feature-link) {
      margin-left: -16px;
    }
    a.active:not(.feature-link):before {
      content: '\2022';
      margin-right: 10px;
    }
  }
}

// DATEPICKER

li.datepicker-date {
  line-height: @vertical-grid-half;
}

#datepicker {
  height: @vertical-grid + 6;
  margin-top: -16px;
  overflow: hidden;
  div#scroller {
    // http://stackoverflow.com/a/18784257
    // css divide width 100% to 3 column
    width: 300%;
    height: inherit;
    display: flex;
    display: -webkit-flex;
    display: -ms-flexbox;
    justify-content: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    nav[role=navigation].slide {
      height: inherit;
      flex: 1;
      -webkit-flex: 1;
      -ms-flex: 1;
      ul {
        // http://stackoverflow.com/a/14103766
        // How to stretch html / css horizontal navigation items evenly and fully across a specified container
        width: 100%;
        height: inherit;
        li {
          height: inherit;
          vertical-align: middle;
        }
        li#datepicker-arrow-previous {
          text-align: left;
        }
        li#datepicker-arrow-next {
          text-align: right;
        }
        li.datepicker-date {
          min-width: 11.11%;
          text-align: center;
          a {
            font-size: @small-font-size;
            width: inherit;
            color: @highlighted-element;
            span {
              display: block;
              min-width: 29px;
            }
            span.day-date {
              display: block;
              margin: 0 auto;
              height: 28px;
              width: 28px;
              text-align: center;
              padding-top: 4px;
            }
          }
          a.date-active, a.date-active-today {
            font-weight: 700;
            span.day-date {
              color: white;
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              background-color: @highlighted-element;
            }
          }
          a.date-past, a.date-active-past {
            color: @default-element;
          }
          a.date-active-past {
            span.day-date {
              color: white;
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              background-color: @default-element;
            }
          }
          a.date-today {
            span.day-date {
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              border: 1px solid @highlighted-element;
            }
          }
        }
      }
    }
  }
}

// ONBOARDING

#wrapper {
  overflow: hidden;
  width: 100%;

  #onboarding-scroller {
    width: 200%;
    height: 100%;
    display: flex;
    display: -webkit-flex;
    display: -ms-flexbox;
    justify-content: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;

    .slide {
      width: 100%;
      height: 100%;
      flex: 1;
      -webkit-flex: 1;
      -ms-flex: 1;

      .onboarding-slide {
        max-width: 100%;
        min-height: 300px;
        max-height: 100%;
      }
    }
  }
}

